Kelsey Development Sandbox/src/objects/DS_TSCC_TSCYC_F__c.object
<CustomObject>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>Background_ID__r.BDOV__c</formula>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>DS TSCC TSCYC F</relationshipLabel>
        <relationshipName>DS_TSCC_TSCYC_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS TSCC TSCYC F</relationshipLabel>
        <relationshipName>DS_TSCC_TSCYC_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FANG_R2__c</fullName>
        <description>Anger Scale Raw Score
9-36</description>
        <label>FANG_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANG_R__c</fullName>
        <description>Anger Scale Raw Score
9-36</description>
        <label>FANG_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANG_T2__c</fullName>
        <description>Anger Scale T Score
30-140</description>
        <label>FANG_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANG_T__c</fullName>
        <description>Anger Scale T Score
30-140</description>
        <label>FANG_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANX_R2__c</fullName>
        <description>Anxiety Scale Raw Score
9-36</description>
        <label>FANX_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANX_R__c</fullName>
        <description>Anxiety Scale Raw Score
9-36</description>
        <label>FANX_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANX_T2__c</fullName>
        <description>Anxiety Scale T Score
30-140</description>
        <label>FANX_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FANX_T__c</fullName>
        <description>Anxiety Scale T Score
30-140</description>
        <label>FANX_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FATR_R2__c</fullName>
        <description>Hyperresponsive Scale Raw Score
9-36</description>
        <label>FATR_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FATR_R__c</fullName>
        <description>Hyperresponsive Scale Raw Score
9-36</description>
        <label>FATR_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FATR_T2__c</fullName>
        <description>Hyperresponsive Scale T Score
30-140</description>
        <label>FATR_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FATR_T__c</fullName>
        <description>Hyperresponsive Scale T Score
30-140</description>
        <label>FATR_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDEP_R2__c</fullName>
        <description>Depression Scale Raw Score
9-36</description>
        <label>FDEP_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDEP_R__c</fullName>
        <description>Depression Scale Raw Score
9-36</description>
        <label>FDEP_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDEP_T2__c</fullName>
        <description>Depression Scale T Score
30-140</description>
        <label>FDEP_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDEP_T__c</fullName>
        <description>Depression Scale T Score
30-140</description>
        <label>FDEP_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDIS_R2__c</fullName>
        <description>Dissociation Scale Raw Score
9-36</description>
        <label>FDIS_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDIS_R__c</fullName>
        <description>Dissociation Scale Raw Score
9-36</description>
        <label>FDIS_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDIS_T2__c</fullName>
        <description>Dissociation Scale T Score
30-140</description>
        <label>FDIS_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDIS_T__c</fullName>
        <description>Dissociation Scale T Score
30-140</description>
        <label>FDIS_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDOATSCC__c</fullName>
        <description>Briere/TSCC date of administration</description>
        <label>FDOATSCC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOATSCYC__c</fullName>
        <description>TSCYC date of administration</description>
        <label>FDOATSCYC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Background_ID__r.FDOV__c</formula>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPTSAR_R2__c</fullName>
        <description>PTS Arousal Subscale Raw Score
9-36</description>
        <label>FPTSAR_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAR_R__c</fullName>
        <description>PTS Arousal Subscale Raw Score
9-36</description>
        <label>FPTSAR_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAR_T2__c</fullName>
        <description>PTS Arousal Subscale T Score
30-140</description>
        <label>FPTSAR_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAR_T__c</fullName>
        <description>PTS Arousal Subscale T Score
30-140</description>
        <label>FPTSAR_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAV_R2__c</fullName>
        <description>PTS Avoidance Subscale Raw Score
9-36</description>
        <label>FPTSAV_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAV_R__c</fullName>
        <description>PTS Avoidance Subscale Raw Score
9-36</description>
        <label>FPTSAV_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAV_T2__c</fullName>
        <description>PTS Avoidance Subscale T Score
30-140</description>
        <label>FPTSAV_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSAV_T__c</fullName>
        <description>PTS Avoidance Subscale T Score
30-140</description>
        <label>FPTSAV_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSI_R2__c</fullName>
        <description>PTS Intrusion Subscale Raw Score
9-36</description>
        <label>FPTSI_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSI_R__c</fullName>
        <description>PTS Intrusion Subscale Raw Score
9-36</description>
        <label>FPTSI_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSI_T2__c</fullName>
        <description>PTS Intrusion Subscale T Score
30-140</description>
        <label>FPTSI_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSI_T__c</fullName>
        <description>PTS Intrusion Subscale T Score
30-140</description>
        <label>FPTSI_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSTOT_R2__c</fullName>
        <description>PTS Total Scale Raw Score 27-108</description>
        <label>FPTSTOT_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSTOT_R__c</fullName>
        <description>PTS Total Scale Raw Score 27-108</description>
        <label>FPTSTOT_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSTOT_T2__c</fullName>
        <description>PTS Total Scale T Score 30-140</description>
        <label>FPTSTOT_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSTOT_T__c</fullName>
        <description>PTS Total Scale T Score 30-140</description>
        <label>FPTSTOT_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRL_R2__c</fullName>
        <description>Underresponsive Scale Raw Score
0-9</description>
        <label>FRL_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRL_R__c</fullName>
        <description>Underresponsive Scale Raw Score
0-9</description>
        <label>FRL_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRL_T2__c</fullName>
        <description>Underresponsive Scale T Score
30-140</description>
        <label>FRL_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRL_T__c</fullName>
        <description>Underresponsive Scale T Score
30-140</description>
        <label>FRL_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSC_R2__c</fullName>
        <description>Sexual Concerns Scale Raw Score
9-36</description>
        <label>FSC_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSC_R__c</fullName>
        <description>Sexual Concerns Scale Raw Score
9-36</description>
        <label>FSC_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSC_T2__c</fullName>
        <description>Sexual Concerns Scale T Score
30-140</description>
        <label>FSC_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSC_T__c</fullName>
        <description>Sexual Concerns Scale T Score
30-140</description>
        <label>FSC_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAGG2__c</fullName>
        <description>Briere: Anger - Num
Raw: 0-27</description>
        <label>FTSCAGG2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAGG__c</fullName>
        <description>Briere: Anger - Num
Raw: 0-27</description>
        <label>FTSCAGG</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAGTN2__c</fullName>
        <description>Briere: Anger T Score - Num
30-140</description>
        <label>FTSCAGTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAGTN__c</fullName>
        <description>Briere: Anger T Score - Num
30-140</description>
        <label>FTSCAGTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAXN2__c</fullName>
        <description>Briere: Anxiety - Num
Raw: 0-27</description>
        <label>FTSCAXN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAXN__c</fullName>
        <description>Briere: Anxiety - Num
Raw: 0-27</description>
        <label>FTSCAXN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAXTN2__c</fullName>
        <description>Briere: Anxiety T Score- Num
30-140</description>
        <label>FTSCAXTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCAXTN__c</fullName>
        <description>Briere: Anxiety T Score- Num
30-140</description>
        <label>FTSCAXTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDPN2__c</fullName>
        <description>Briere: Depression - Num
Raw: 0-27</description>
        <label>FTSCDPN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDPN__c</fullName>
        <description>Briere: Depression - Num
Raw: 0-27</description>
        <label>FTSCDPN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDPTN2__c</fullName>
        <description>Briere: Depression T Score - Num
30-140</description>
        <label>FTSCDPTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDPTN__c</fullName>
        <description>Briere: Depression T Score - Num
30-140</description>
        <label>FTSCDPTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDSN2__c</fullName>
        <description>Briere: Dissociation - Num Raw: 0-30</description>
        <label>FTSCDSN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDSN__c</fullName>
        <description>Briere: Dissociation - Num Raw: 0-30</description>
        <label>FTSCDSN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDSTN2__c</fullName>
        <description>Briere: Dissociation T Score- Num
30-140</description>
        <label>FTSCDSTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCDSTN__c</fullName>
        <description>Briere: Dissociation T Score- Num
30-140</description>
        <label>FTSCDSTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCFNN2__c</fullName>
        <description>Briere: Fantasy - Num Raw: 0-9</description>
        <label>FTSCFNN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCFNN__c</fullName>
        <description>Briere: Fantasy - Num Raw: 0-9</description>
        <label>FTSCFNN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCFNTN2__c</fullName>
        <description>Briere: Fantasy T Score- Num
30-140</description>
        <label>FTSCFNTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCFNTN__c</fullName>
        <description>Briere: Fantasy T Score- Num
30-140</description>
        <label>FTSCFNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCHYN2__c</fullName>
        <description>Briere: Hyperresponsive - Num Raw: 0-8</description>
        <label>FTSCHYN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCHYN__c</fullName>
        <description>Briere: Hyperresponsive - Num Raw: 0-8</description>
        <label>FTSCHYN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCHYTN2__c</fullName>
        <description>Briere: Hyperresponsive Tscore - Num
30-140</description>
        <label>FTSCHYTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCHYTN__c</fullName>
        <description>Briere: Hyperresponsive Tscore - Num
30-140</description>
        <label>FTSCHYTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCNTN2__c</fullName>
        <description>Briere: Underresponsive T Score- Num
30-140</description>
        <label>FTSCNTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCNTN__c</fullName>
        <description>Briere: Underresponsive T Score- Num
30-140</description>
        <label>FTSCNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCODN2__c</fullName>
        <description>Briere: Overt Dissociation - Num Raw: 0-21</description>
        <label>FTSCODN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCODN__c</fullName>
        <description>Briere: Overt Dissociation - Num Raw: 0-21</description>
        <label>FTSCODN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCODTN2__c</fullName>
        <description>Briere: Overt Dissociation T Score - Num
30-140</description>
        <label>FTSCODTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCODTN__c</fullName>
        <description>Briere: Overt Dissociation T Score - Num
30-140</description>
        <label>FTSCODTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCPTN2__c</fullName>
        <description>Briere: Post Traumatic Stress - Num Raw: 0-30</description>
        <label>FTSCPTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCPTN__c</fullName>
        <description>Briere: Post Traumatic Stress - Num Raw: 0-30</description>
        <label>FTSCPTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCPTTN2__c</fullName>
        <description>Briere: Post Traumatic Stress T Score - Num
30-140</description>
        <label>FTSCPTTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCPTTN__c</fullName>
        <description>Briere: Post Traumatic Stress T Score - Num 30-140</description>
        <inlineHelpText>30-140</inlineHelpText>
        <label>FTSCPTTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCUNN2__c</fullName>
        <description>Briere: Underresponsive - Num Raw: 0-10</description>
        <label>FTSCUNN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCUNN__c</fullName>
        <description>Briere: Underresponsive - Num Raw: 0-10</description>
        <label>FTSCUNN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTSCUNTN__c</fullName>
        <description>Briere: Underresponsive T Score- Num 30-140</description>
        <label>FTSCUNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_TSCC_A__c</fullName>
        <label>STATUS TSCC A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TSCYC__c</fullName>
        <label>STATUS TSCYC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS TSCC TSCYC F</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Background_ID__c</columns>
        <columns>Client__c</columns>
        <columns>BDOV__c</columns>
        <columns>FDOATSCYC__c</columns>
        <columns>FDOATSCC__c</columns>
        <columns>SECTION__c</columns>
        <columns>STATUS_TSCYC__c</columns>
        <columns>STATUS_TSCC_A__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS TSCC TSCYC F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS TSCC TSCYC F</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TSCC_A_ANG_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCAGG__c  &lt;&gt;  FTSCAGG2__c</errorConditionFormula>
        <errorDisplayField>FTSCAGG2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anger Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
            (FTSCAGG__c&gt;=0)&amp;&amp;
            (FTSCAGG__c&lt;=27)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCAGG__c)
             )
            &amp;&amp;
            NOT(
            FTSCAGG__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCAGG__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Anger is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCAGTN__c  &lt;&gt;  FTSCAGTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCAGTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anger T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            ( FTSCAGTN__c &gt;= 30) &amp;&amp;
            (FTSCAGTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCAGTN__c)
             )
            &amp;&amp;
            NOT(
            FTSCAGTN__c = 0)</errorConditionFormula>
        <errorDisplayField>FTSCAGTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Anger is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCAXN__c  &lt;&gt;  FTSCAXN2__c</errorConditionFormula>
        <errorDisplayField>FTSCAXN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anxiety Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCAXN__c&gt;=0)&amp;&amp;
            (FTSCAXN__c &lt;= 27)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCAXN__c)
             )
            &amp;&amp;
            NOT(
            FTSCAXN__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCAXN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Anxiety is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCAXTN__c  &lt;&gt;  FTSCAXTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCAXTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anxiety T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCAXTN__c&gt;=30)&amp;&amp;
            (FTSCAXTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCAXTN__c)
             )
            &amp;&amp;
            NOT(
            FTSCAXTN__c = 0)</errorConditionFormula>
        <errorDisplayField>FTSCAXTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Anxiety is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCDPN__c  &lt;&gt;  FTSCDPN2__c</errorConditionFormula>
        <errorDisplayField>FTSCDPN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Depression Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCDPN__c&gt;=0)&amp;&amp;
            (FTSCDPN__c &lt;= 27)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCDPN__c)
             )
            &amp;&amp;
            NOT(
            FTSCDPN__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCDPN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Depression is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCDPTN__c  &lt;&gt;  FTSCDPTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCDPTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Depression T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCDPTN__c&gt;=30)&amp;&amp;
            (FTSCDPTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCDPTN__c)
             )
            &amp;&amp;
            NOT(
            FTSCDPTN__c = 0)</errorConditionFormula>
        <errorDisplayField>FTSCDPTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Depression is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCFNN__c  &lt;&gt;  FTSCFNN2__c</errorConditionFormula>
        <errorDisplayField>FTSCFNN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Fantasy Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCFNN__c&gt;=0)&amp;&amp;
            (FTSCFNN__c &lt;= 9)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCFNN__c)
             )
            &amp;&amp;
            NOT(
            FTSCFNN__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCFNN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Fantasy is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCFNTN__c  &lt;&gt;  FTSCFNTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCFNTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Fantasy T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCFNTN__c&gt;=30)&amp;&amp;
            (FTSCFNTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCFNTN__c)
             )
            &amp;&amp;
            NOT(
            FTSCFNTN__c = 0)</errorConditionFormula>
        <errorDisplayField>FTSCFNTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Fantasy is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCODN__c  &lt;&gt;  FTSCODN2__c</errorConditionFormula>
        <errorDisplayField>FTSCODN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Overt Dissociation Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCODN__c&gt;=0)&amp;&amp;
            (FTSCODN__c &lt;= 21)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCODN__c)
             )
            &amp;&amp;
            NOT(
            FTSCODN__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCODN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Overt Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCODTN__c  &lt;&gt;  FTSCODTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCODTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Overt Dissociation T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCODTN__c&gt;=30)&amp;&amp;
            (FTSCODTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCODTN__c)
             )
            &amp;&amp;
            NOT(
            FTSCODTN__c = 0)</errorConditionFormula>
        <errorDisplayField>FTSCODTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Overt Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCDSN__c  &lt;&gt;  FTSCDSN2__c</errorConditionFormula>
        <errorDisplayField>FTSCDSN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Dissociation Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (FTSCDSN__c&gt;=0)&amp;&amp;
            (FTSCDSN__c &lt;= 30)
            )
            &amp;&amp;
            NOT(
            ISNULL(FTSCDSN__c)
             )
            &amp;&amp;
            NOT(
            FTSCDSN__c = 999)</errorConditionFormula>
        <errorDisplayField>FTSCDSN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FTSCDSTN__c  &lt;&gt;  FTSCDSTN2__c</errorConditionFormula>
        <errorDisplayField>FTSCDSTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Dissociation T-Score</errorMessage>
    </validationRules>
</CustomObject>